--- a/projetinho/index-pronto.html
+++ b/projetinho/index-pronto.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style-pronto.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>ToDo List</title>
 </head>
 <body>
-    
-</body>
-</html>
+    <div id="container">
+        <header>
+            <img src="Logo.png">
+        </header>
+        <main>
+            <div class="input-container">
+                <input placeholder="Adicione uma nova tarefa" type="text" id="task" required><p id="button-p">k</p>
+                <button type="submit"><strong>Criar</strong><p>a</p> <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#F2F2F2"><path d="M444-288h72v-156h156v-72H516v-156h-72v156H288v72h156v156Zm36.28 192Q401-96 331-126t-122.5-82.5Q156-261 126-330.96t-30-149.5Q96-560 126-629.5q30-69.5 82.5-122T330.96-834q69.96-30 149.5-30t149.04 30q69.5 30 122 82.5T834-629.28q30 69.73 30 149Q864-401 834-331t-82.5 122.5Q699-156 629.28-126q-69.73 30-149 30Zm-.28-72q130 0 221-91t91-221q0-130-91-221t-221-91q-130 0-221 91t-91 221q0 130 91 221t221 91Zm0-312Z"/></svg></button>
+            </div>
+        </main>
+        <br>
+        <div id="linha">
+            <h3 id="criadas">Tarefas criadas <span>5</span></h3>
+            <h3 id="concluidas">Concluídas <span>2 de 5</span></h3>
+        </div>
+        <div class="tarefas">
+            <label for="tarefaFazendo"></label>
+            <input  type="checkbox" id="tarefa" >Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer. ^<button id="button-lixeira"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.7021 9.98547H13.3716V15.5073H14.7021V9.98547Z" fill="#808080"/>
+                <path d="M11.9624 9.98547H10.6318V15.5073H11.9624V9.98547Z" fill="#808080"/>
+                <path d="M18.978 7.16712C18.9754 7.03061 18.9295 6.89846 18.8469 6.78975C18.7642 6.68104 18.6492 6.6014 18.5184 6.56232C18.4596 6.53782 18.3974 6.52252 18.3339 6.51696H14.7868C14.6525 6.07791 14.3808 5.69355 14.0117 5.42047C13.6426 5.14739 13.1956 5 12.7365 5C12.2774 5 11.8304 5.14739 11.4613 5.42047C11.0922 5.69355 10.8205 6.07791 10.6862 6.51696H7.13911C7.08068 6.51814 7.02269 6.52729 6.96674 6.54418H6.95162C6.81318 6.58701 6.69334 6.67547 6.61163 6.79515C6.52992 6.91483 6.49117 7.05866 6.50169 7.20319C6.51222 7.34771 6.5714 7.48441 6.66958 7.59099C6.76776 7.69757 6.89916 7.76774 7.04234 7.79006L7.75298 17.5334C7.76382 17.9127 7.91693 18.2741 8.18191 18.5458C8.44688 18.8175 8.80435 18.9797 9.18332 19H16.2867C16.6662 18.9804 17.0244 18.8186 17.29 18.5468C17.5556 18.2751 17.7092 17.9132 17.72 17.5334L18.4277 7.79914C18.5802 7.77797 18.72 7.70232 18.8212 7.58615C18.9223 7.46999 18.978 7.32116 18.978 7.16712ZM12.7365 6.21456C12.8661 6.21458 12.9943 6.24146 13.1129 6.29351C13.2316 6.34556 13.3382 6.42164 13.426 6.51696H12.047C12.1346 6.42135 12.2411 6.34507 12.3599 6.29299C12.4786 6.24092 12.6069 6.21421 12.7365 6.21456ZM16.2867 17.7904H9.18332C9.10168 17.7904 8.97467 17.6573 8.95955 17.4457L8.25798 7.81123H17.215L16.5135 17.4457C16.4984 17.6573 16.3714 17.7904 16.2867 17.7904Z" fill="#808080"/>
+                </svg>
+                </button>
+            <br>
+            <input  type="checkbox" id="tarefa" >Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.<br>
+            <input type="checkbox" id="tarefa" >Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.<br>
+        </div>
+        
