--- a/projetinho/index.html
+++ b/projetinho/index.html
@@ -23,7 +23,7 @@
         </main>
         <br>
         <div id="linha">
-            <h3 id="criadas">Tarefas criadas <span>0</span></h3>
+            <h3 id="criadas">Tarefas criadas <span criadas>0</span></h3>
             <h3 id="concluidas">Concluídas <span>0</span></h3>
         </div>
         <br>
