--- a/projetinho/index-pronto.html
+++ b/projetinho/index-pronto.html
@@ -21,14 +21,14 @@
             </div>
         </main>
         <br>
-        <div id="linha">
+        <div onclick="apagarTarefas" id="linha">
             <h3 id="criadas">Tarefas criadas <span>5</span></h3>
             <h3 id="concluidas">Concluídas <span>2 de 5</span></h3>
         </div>
         <br>
         <div class="tarefas">
             <ul>
-                <li class="lista">
+                <li id="lista">
                     <input type="checkbox" id="Atividades" >
                     <span>
                         Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.
