--- a/projetinho/index.html
+++ b/projetinho/index.html
@@ -24,7 +24,7 @@
         <br>
         <div id="linha">
             <h3 id="criadas">Tarefas criadas <span criadas>0</span></h3>
-            <h3 id="concluidas">Concluídas <span>0</span></h3>
+            <h3 id="concluir">Concluídas <span concluidas>0</span></h3>
         </div>
         <br>
         <div id="campo2">
