--- a/projetinho/index-pronto.html
+++ b/projetinho/index-pronto.html
@@ -30,7 +30,7 @@
             <ul>
                 <li id="lista">
                     <input type="checkbox" id="Atividades" >
-                    <span>
+                    <span class="concluido">
                         Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.
                     </span>
                 </li>
