--- a/projetinho/index-pronto.html
+++ b/projetinho/index-pronto.html
@@ -22,17 +22,17 @@
         </main>
         <br>
         <div onclick="apagarTarefas" id="linha">
-            <h3 id="criadas">Tarefas criadas <span>5</span></h3>
-            <h3 id="concluidas">Concluídas <span>2 de 5</span></h3>
+            <h3 id="criadas">Tarefas criadas <span id="spanNumero">5</span></h3>
+            <h3 id="concluidas">Concluídas <span id="spanNumero">2 de 5</span></h3>
         </div>
         <br>
         <div class="tarefas">
             <ul>
                 <li id="lista">
-                    <input type="checkbox" id="Atividades" >
                     <span class="concluido">
+                        <input style="color: var(#262626);" type="checkbox" id="Atividades" >
                         Integer urna interdum massa libero auctor neque turpis turpis semper. Duis vel sed fames integer.
-                    </span>
+                    </span><br>
                 </li>
                 <li>
                     <input  type="checkbox" id="Atividades" >
